crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/valid/single-class-expr.js
/* should not generate diagnostics */
const ValidClassExpression = class { }
