crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/invalid/multi-class-expr.js
/* should generate diagnostics */
const InvalidClassExpr1 = class { }
const InvalidClassExpr2 = class { }
